--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,34 @@
-plugins {
-    id "application"
-}
+apply plugin: "java"
+apply plugin: "application"
+
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
 dependencies {
-	compile "org.slf4j:slf4j-api:1.7.26"
-	runtime "ch.qos.logback:logback-classic:1.2.3"
+    compile "org.slf4j:slf4j-api:1.7.26"
+    runtime "ch.qos.logback:logback-classic:1.2.3"
 }
 
+sourceCompatibility = 11
+targetCompatibility = 11
+
 mainClassName = "se.kilathaar.prototype.socket.Server"
+
+jar {
+    manifest {
+        attributes "Main-Class": mainClassName
+        attributes "Class-Path": configurations.runtime.collect { "libs/" + it.getName() }.join(' ')
+    }
+
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
+
+task copyToLib(type: Copy) {
+    into "$buildDir/output/libs"
+    from configurations.runtime
+}
+
+build.dependsOn(copyToLib)
